--- a/src/assets/sass/footer.scss
+++ b/src/assets/sass/footer.scss
@@ -105,6 +105,10 @@
                     background: #fff;
                 }
             }
+            .ul {
+                border-top: 2px solid #fff;
+                border-bottom: 2px solid #fff;
+            }
         }
     }
 }
