--- a/src/assets/css/blog.css
+++ b/src/assets/css/blog.css
@@ -118,6 +118,7 @@
     align-items: center;
     min-height: 30vh;
     padding-top: 3.125rem;
+    border-bottom: 2px solid #fff;
   }
   #int-hero picture {
     z-index: -2;
@@ -182,7 +183,7 @@
     background-attachment: fixed;
     min-height: 18.75rem;
     height: auto;
-    padding: 4rem 0;
+    padding: 6rem 0 4rem;
     font-size: inherit;
   }
 }
