feat: Update styles and content for improved design and functionality
- Changed logo URL in config to a new image.
- Enhanced hover effect on hero section images with updated filter properties.
- Added border styles to navigation for better visibility in both light and dark modes.
- Adjusted layout properties in local.css for better responsiveness and spacing.
- Updated root.css to include a new accent color variable.
- Modified blog and project page metadata for improved SEO and navigation.
- Renamed project title for clarity in content.

--- a/src/assets/css/critical.css
+++ b/src/assets/css/critical.css
@@ -25,7 +25,7 @@
     margin: 0;
   }
   #hero .social-section img:hover {
-    filter: invert(25%) sepia(50%) saturate(1000%) hue-rotate(270deg);
+    filter: invert(40%) sepia(39%) saturate(3345%) hue-rotate(223deg) brightness(104%) contrast(101%);
   }
   #hero a {
     text-decoration: none;
