--- a/src/assets/css/header.css
+++ b/src/assets/css/header.css
@@ -565,6 +565,7 @@
     max-width: 100%;
     border-radius: 0;
     top: 0;
+    border-bottom: 2px #000 solid;
   }
   #navigation {
     width: 100%;
@@ -701,6 +702,7 @@
     padding: 0;
     display: flex;
     align-items: center;
+    font-weight: 900;
     /* prevent flexbox from squishing it */
     flex: none;
   }
@@ -766,6 +768,9 @@
 }
 /* Dark Mode */
 @media only screen and (min-width: 64rem) {
+  body.dark-mode.scroll #navigation {
+    border-bottom: 2px #fff solid;
+  }
   body.dark-mode #navigation {
     background-color: var(--dark);
   }
