--- a/src/assets/sass/root.scss
+++ b/src/assets/sass/root.scss
@@ -9,6 +9,7 @@
         --headerColor: #000;
         --bodyTextColor: #111;
         --bodyTextColorWhite: #fff;
+        --accent: #7070ff;
 
         /* 13px - 16px */
         --topperFontSize: clamp(0.8125rem, 1.6vw, 1rem);
