--- a/src/assets/sass/critical.scss
+++ b/src/assets/sass/critical.scss
@@ -31,7 +31,8 @@
 
                 img {
                     &:hover {
-                    filter: invert(25%) sepia(50%) saturate(1000%) hue-rotate(270deg);
+                    filter: invert(40%) sepia(39%) saturate(3345%) hue-rotate(223deg) brightness(104%) contrast(101%);
+                    ;
                 }
             }
         }
