--- a/src/assets/sass/local.scss
+++ b/src/assets/sass/local.scss
@@ -14,16 +14,14 @@
         
 
         .container {
-            width: 100%;
-            /* changes to 1280px at desktop */
-            max-width: calc(850 / 16 * 1rem);
+            max-width: calc(1280/16 * 1rem);
             margin: auto;
             display: flex;
             justify-content: center;
             align-items: stretch;
             flex-direction: column;
             /* 48px - 108px */
-            gap: clamp(3rem, 5vw, 6.75rem);
+            gap: clamp(6rem, 10vw, 13rem);
         }
 
         .content {
@@ -44,9 +42,9 @@
 
         .text {
             margin-bottom: calc(16 / 16 * 1rem);
-            &:last-of-type {
-                margin-bottom: calc(32 / 16 * 1rem);
-            }
+            // &:last-of-type {
+            //     margin-bottom: calc(32 / 16 * 1rem);
+            // }
             font-size: 1.5rem;
         }
 
@@ -132,7 +130,7 @@
 
         .background {
             width: 100%;
-            height: 50%;
+            height: 40%;
             background-color: #1a1a1a;
             display: block;
             position: absolute;
@@ -246,7 +244,10 @@
             }
 
             .background {
-                background-color: rgba(0, 0, 0, 0.6);
+                background-color: #fff;
+                img {
+                    filter: invert(100%);
+                }
             }
         }
     }
@@ -268,7 +269,7 @@
         overflow: hidden;
 
         .container {
-            width: 100%;
+            width: 90%;
             max-width: calc(1280/16 * 1rem);
             margin: auto;
             display: flex;
@@ -374,7 +375,7 @@
             img {
                 width: 100%;
                 height: 100%;
-                object-fit: fill;
+                object-fit: cover;
                 position: absolute;
                 top: 0;
                 left: 0;
