style: Update layout and spacing in local stylesheets; improve project description clarity
- Changed justify-content from space-between to flex-start in local.css and local.scss for better alignment.
- Updated background color in local.css and local.scss for improved visual consistency.
- Increased margin-bottom in local.css and local.scss for better spacing.
- Enhanced project description in c-fcn-pytorch-implementation.md for clarity and readability.

--- a/src/assets/css/local.css
+++ b/src/assets/css/local.css
@@ -310,10 +310,10 @@
     padding: 1.25rem;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: flex-start;
     /* makes the item text the element that grows to fill the container */
     flex-grow: 1;
-    border: 1px solid #ebebeb;
+    background-color: #f9f9f9;
     transition: background-color 0.3s;
   }
   #blog .h3 {
@@ -328,7 +328,7 @@
     align-items: center;
     gap: 1rem;
     transition: color 0.3s;
-    margin-bottom: 1rem;
+    margin-bottom: 2rem;
   }
   #blog .icon-wrapper {
     width: 3rem;
