--- a/src/assets/sass/blog.scss
+++ b/src/assets/sass/blog.scss
@@ -406,6 +406,10 @@
             .blog-date {
                 color: #f7f7f7;
             }
+            .blog-link {
+                background-color: #fff;
+                color: var(--headerColor);
+            }
         }
 
         .blog-sidebar {
