--- a/src/assets/css/about.css
+++ b/src/assets/css/about.css
@@ -137,8 +137,7 @@
 }
 /* Dark Mode */
 @media only screen and (min-width: 0rem) {
-  body.dark-mode #sbs .left:before,
-  body.dark-mode #sbs .left:after {
+  body.dark-mode #sbs .left:before, body.dark-mode #sbs .left:after {
     background: var(--accent);
   }
   body.dark-mode #sbs .picture2 {
