refactor: Make dark milder

--- a/src/assets/sass/dark.scss
+++ b/src/assets/sass/dark.scss
@@ -8,9 +8,9 @@
 @media only screen and (min-width: 0rem) {
     // Dark Mode Color Scheme
     :root {
-        --dark: #000;
-        --medium: #111;
-        --accent: #fff;
+        --dark: #1d283a;
+        --medium: #616975;
+        --accent: #e8eaeb;
     }
 
     body.dark-mode {
