--- a/src/assets/sass/root.scss
+++ b/src/assets/sass/root.scss
@@ -184,19 +184,32 @@
         left: 0;
         opacity: 0;
     }
+    
+    /* baskervville-regular - latin */
     @font-face {
-        font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-        font-family: 'Nexa';
-        font-style: normal;
-        font-weight: 200;
-        src: url('/assets/fonts/Nexa-ExtraLight.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
+    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+    font-family: 'Baskervville';
+    font-style: normal;
+    font-weight: 400;
+    src: url('/assets/fonts/baskervville-v19-latin-regular.eot'); /* IE9 Compat Modes */
+    src: url('/assets/fonts/baskervville-v19-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+        url('/assets/fonts/baskervville-v19-latin-regular.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+        url('/assets/fonts/baskervville-v19-latin-regular.woff') format('woff'), /* Chrome 5+, Firefox 3.6+, IE 9+, Safari 5.1+, iOS 5+ */
+        url('/assets/fonts/baskervville-v19-latin-regular.ttf') format('truetype'), /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
+        url('/assets/fonts/baskervville-v19-latin-regular.svg#Baskervville') format('svg'); /* Legacy iOS */
     }
+    /* baskervville-600 - latin */
     @font-face {
-        font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-        font-family: 'Nexa';
-        font-style: normal;
-        font-weight: 900;
-        src: url('/assets/fonts/Nexa-Heavy.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
+    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+    font-family: 'Baskervville';
+    font-style: normal;
+    font-weight: 600;
+    src: url('/assets/fonts/baskervville-v19-latin-600.eot'); /* IE9 Compat Modes */
+    src: url('/assets/fonts/baskervville-v19-latin-600.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+        url('/assets/fonts/baskervville-v19-latin-600.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+        url('/assets/fonts/baskervville-v19-latin-600.woff') format('woff'), /* Chrome 5+, Firefox 3.6+, IE 9+, Safari 5.1+, iOS 5+ */
+        url('/assets/fonts/baskervville-v19-latin-600.ttf') format('truetype'), /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
+        url('/assets/fonts/baskervville-v19-latin-600.svg#Baskervville') format('svg'); /* Legacy iOS */
     }
 }
 
