--- a/src/assets/sass/dark.scss
+++ b/src/assets/sass/dark.scss
@@ -8,9 +8,8 @@
 @media only screen and (min-width: 0rem) {
     // Dark Mode Color Scheme
     :root {
-        --dark: #1d283a;
-        --medium: #616975;
-        --accent: #e8eaeb;
+        --dark-background: #2d2815;
+        --dark-text: #fff;
     }
 
     body.dark-mode {
