--- a/src/assets/css/critical.css
+++ b/src/assets/css/critical.css
@@ -56,19 +56,19 @@
   }
   #hero .title {
     width: 100%;
-    color: var(--bodyTextColor);
-    font-size: clamp(6rem, 10vw, 8rem);
-    margin-bottom: 2rem;
-    text-align: left;
+    color: var(--text);
+    font-size: clamp(3rem, 5vw, 4rem);
+    text-align: center;
   }
   #hero .text {
     /* 32px - 40px */
     /* 40px - 48px */
     margin-bottom: clamp(2.5rem, 4vw, 3rem);
-    color: var(--bodyTextColor);
-    font-size: clamp(1.9375rem, 3.9vw, 3.0625rem);
-    max-width: 58.75rem;
     margin-left: auto;
+    margin-right: 0;
+    color: var(--bodyTextColor);
+    font-size: clamp(1rem, 2vw, 2rem);
+    max-width: 50rem;
     text-align: left;
   }
   #hero .button-solid {
