--- a/src/assets/sass/critical.scss
+++ b/src/assets/sass/critical.scss
@@ -72,10 +72,9 @@
 
         .title {
             width: 100%;
-            color: var(--bodyTextColor);
-            font-size: clamp(6rem, 10vw, 8rem);
-            margin-bottom: calc(32 / 16 * 1rem);
-            text-align: left;
+            color: var(--text);
+            font-size: clamp(3rem, 5vw, 4rem);
+            text-align: center;
         }
 
         .text {
@@ -83,10 +82,11 @@
             // margin: 0 auto clamp(2rem, 4vw, 2.5rem) 0;
             /* 40px - 48px */
             margin-bottom: clamp(2.5rem, 4vw, 3rem);
-            color: var(--bodyTextColor);
-            font-size: clamp(1.9375rem, 3.9vw, 3.0625rem);
-            max-width: calc(940 / 16 * 1rem);
             margin-left: auto;
+            margin-right: 0;
+            color: var(--bodyTextColor);
+            font-size: clamp(1rem, 2vw, 2rem);
+            max-width: calc(800 / 16 * 1rem);
             text-align: left;
         }
 
